[package]
name = "study"
version = "0.1.0"
authors = ["angelrain1 <lagudomeze@163.com>"]

[dependencies]
tokio-core      = "0.1"
tokio-io        = "0.1"
crossbeam       = "0.3"
lazy_static     = "0.2"
futures         = "0.1"
bytes           = "0.4"
tokio_kcp       = "0.4"
log             = "0.3"
env_logger      = "0.4"
glfw            = "0.16"
h2              = { git = 'https://github.com/carllerche/h2' }
futures-await   = { git = 'https://github.com/alexcrichton/futures-await' }
time            = "0.1.38"

[dependencies.rusqlite]
version = "0.12.0"
features = ["bundled","blob","backup"]

[dependencies.mio]
version = "0.6"

#[dependencies.gtk]
#version = "0.2.0"
#features = ["v3_16"]

